# admyral

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  admyral.code-workspace  alembic.ini  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  push_workflows.sh  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  initial_setup.sh  pyproject.toml  start_server.sh
backend/app/: config.py  db.py  deps.py  main.py  models.py  schema.py  shared_queries.py
backend/app/core/: utils.py  workflow_generation.py
backend/migrations/: env.py
backend/migrations/versions/: 2df41b795ffd_init.py  37d9571b67ee_migrate_icon_column_workflow_template_.py  43707d4b8f9c_add_prev_action_state_id_column_to_.py  81da09e8f6fc_remove_integrationtype_enum.py  8bc2d1453ebe_add_note_workflow_node_type.py  a89c45ac9f76_add_integration_action_type.py  ac3bdb61a563_add_jira_to_integration_type.py  ac90cdc48150_add_integration_type_to_credential_table.py  b16c43b35cd9_add_workflow_generation_table.py  b1ef28c0bf5d_add_manual_workflow_start.py  b43779be43da_add_is_error_to_workflow_run_action_.py  b678a86afb6c_add_action_input_template_table.py  d4cd7f559526_add_slack_to_integration_type.py  d6c366fcdd68_init.py  da93993063d6_add_role_and_additional_info_column_to_.py  f3d9ded07cd8_add_error_column_to_workflow_run_table.py  f41c0e515eef_add_ai_action_to_actiontype_enum.py  fa470fefe8eb_add_send_email_to_action_types.py  fb54865daf72_add_workflow_templates.py
backend/scripts/: populate_db_with_workflow_templates_library.py
backend/tests/core/: test_workflow_generation.py
backend/workflow-templates-library/: action_input_template.json  action_node.json  workflow.json  workflow_edge.json  workflow_template_metadata.json
examples/access_review/: README.md  pyproject.toml
examples/access_review/workflows/: DEBUG.py  github_audit_logs_owner_changes.py  github_handle_pr_with_unreviewed_commits.py  github_unreviewed_commits_are_merged.py  google_docs_policy_revision_monitoring.py  google_drive_public_link_sharing_docs.py  kandji_alert_for_unencrypted_devices.yaml  kandji_device_information.py  kandji_unencrypted_devices.py  kandji_unencrypted_devices2.py  list_okta_admins.yaml  monitor_and_follow_up_merged_github_prs_without_approval.py  monitor_merged_github_prs_without_approval.py  (+19 more)
workflow-runner/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  push_to_docker_hub.sh
workflow-runner/.sqlx/: query-033036ae49596b84920bf690393f9a6559076d6facf7e755a18e95fac4df1559.json  query-054c28c070be33830a469e98a2910eea262386a38e14e492d7e98e0c40ffa304.json  query-08de5709e0e67b81c51d0cba55ccf219c8bda9c9136c1e018bc8d35bf631703b.json  query-096b7bb212ac6bd38668050b51ef495f437869dc258d337149626bd8195c342f.json  query-1502e258cf412652a17827cc0fb0543858bfdb8a80f2993f8305faeb55707ac8.json  query-162141872b6d3e2e77347ca731b36b4718e6f0b2f70a8b5294c9ffbdf47f6e9d.json  query-16242b5baeba2fd6b5c1ff4359b66a0dbea737b7933eb6ee26d7fb41c9d11126.json  query-35362ed84f7b932a4fac6c0178452d5c3bc5f3f76fa50f592e554493a56ea183.json  query-402f2e985c6c3cd04fd2c5632d457b6b539cd5d6b5c2f10d2b55199d6794c242.json  query-41984dc573e2566f43a97cc789952e4b869ff28d0121f2406cc56eb2a549da21.json  query-42454fecdebbf333d24b8f18621a128426bd43e16eec994bb02790bc0e513ab8.json  query-4c17e9662244fd30f37b354df119d7786230bc4711561f2d2cdc8cbb115f8018.json  query-4f5095be05c1e2052aa72ef7498df649fae8971d2d812d97099ab7bdc8eac065.json  query-5670e63b7835ad830950cf6c4f2c6200df1c1bfdabff0a0b3552bc187215d097.json  query-6372e8455b98c20d1f2e47004f403657de340329ffc7165210dbde88852de399.json  query-68e12b1d42e7b1eae9eb91228d4dcc800ff663146d5d0bfca05161f660424f9a.json  query-69774eb2027439a86150d0a79fb611da28740c2824bebcd85a0e0ae079e35258.json  query-6b7661aa856e617775a959f9ca6e19224c0dce77c5ade7320e5f79eff9eb567b.json  query-6d2025fb94bc0334bf9c1874d8348ed6e2d66954b9672d3d8a076c89c9739acd.json  query-6d2a1e0477241d6e781bb7065702a4917a5903d96881cd90531215e863daea6d.json  query-6e9168f73304f5b57e5e8ff6f402637ff70c5dbbccbaac93754ca188a4d19cf0.json  query-6f250b57a44f03b9414afd389ef8e7f746aec64902115dea2b858b11abb7f0fe.json  query-7215dfcc3de5856f8307ac324f2c04027061628cd8d28e820c3451507a394d26.json  query-762d9f38080e3e55889c725a83eb4a5b8a96162b2f2f78cb76d81290016ea449.json  query-7738bc8e78c32be1fb7f76e80b09e8f7d8a4c9ca319f2898f7197e8fd15946fc.json  query-7bfb63c1e5a32bec74ed54e2e400f9d87df57daa6a37827daf105fa71bec477e.json  query-7c32921750c8efedadf0cec7f2c4e9774b1c30a833eb37346e7447ff19b0e5bd.json  query-7e578dc2f29465bccdf6481059caf8edc0a5ebf5edde34795795d35675bb5b4c.json  query-7e989f70044f9d177d8ab8ea639e77ed1e24a8d1abc5b3f7f8c7c175a9b6bcf8.json  query-805417f4fbde08fdcfc80ca461a44299412ee57c5bbcfc1527822bef5e96c0bf.json  query-8429d6366d35338f7b8699d5d464f9688cef8a6c594890fe02a59bd4c9655efc.json  query-86eb8191f6512ca07c62e68eecc2c50b25c28f2796660991dc53e758a38e43bc.json  query-8a52d2d1608c02cb37c5b397cfcaf42ed6da97e6d176c03a1f843fa74171ab8c.json  query-8e7c30c950db2ff33d0ab064c399b4735c273c83ecfd9c8ff664d91f7b44597a.json  query-9ff9e727f488686414682f8939a6796871db961207b6663b284dbbcff5699f7a.json  query-a0f2ad08a08be354ace513d7e8c8d638f96aac88cd4db791f5843d587d04cb8b.json  query-a7542396e0fb3cf7375dae189eea0ff05f98ec4833faef73d234e64b225a6eb4.json  query-a8184cd7dc3ee3a63fdff0c686199bce7a23e500d2723a97985beda597706ddf.json  query-b1088d787c3e1fa3bee22f3c014fdaf1ecb38f85c3e0d75edd37f6a65b1d0eb4.json  query-b37555b8cf9a029cf4aee5607cbfd2366f8d5e167fbc9dd780ca2420a4ee6729.json  (+7 more)
workflow-runner/src/: main.rs
(+1068 files in other folders)
