[tool.poetry]
name = "admyral"
version = "0.1.34"
description = ""
authors = ["Daniel Grittner <danielgrittner@web.de>"]
readme = "README.md"

exclude = [
    "examples",
    "tests",
    "img",
    "docs",
    "web",
    "docker",
    "scripts",
]
include = [
    "admyral",
    "*.txt",
    "*.md",
]

[tool.poetry.scripts]
admyral = "admyral.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
astor = "^0.8.1"
temporalio = "^1.6.0"
aiofiles = "^24.1.0"
pydantic = "^2.7.4"
pip-tools = "^7.4.1"
sqlmodel = "^0.0.22"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
click = "^8.1.7"
requests = "^2.32.3"
psutil = "^6.0.0"
cryptography = "^42.0.8"
openai = "^1.37.0"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
resend = "^2.2.0"
boto3 = "^1.34.147"
anthropic = "^0.31.2"
mistralai = "^0.4.2"
msgraph-sdk = "^1.5.3"
pre-commit = "^3.8.0"
ruff = "^0.5.5"
multipledispatch = "^1.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
setuptools-scm = "^8.1.0"
docker = "^7.1.0"
fastapi-nextauth-jwt = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[tool.pdm]
version = { source = "file", path = "admyral/__init__.py" }
distribution = true
