[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel Grittner <danielgrittner@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = "^0.110.1"
sqlmodel = "^0.0.16"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
