[package]
name = "workflow-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.81"
async-trait = "0.1.80"
async_once = "0.2.6"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
enum_dispatch = "0.3.13"
futures = "0.3.30"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
moka = { version = "0.12.7", features = ["future"] }
quickxml_to_serde = { version = "0.6.0", features = ["json_types", "regex_path"] }
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "macros", "json", "time" ] }
time = "0.3.34"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = [ "serde" ] }
