[tool.poetry]
name = "access_review"
version = "0.1.0"
description = ""
authors = ["Daniel Grittner <danielgrittner@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
admyral = { path = "../../", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
